--- a/Backend/package.json
+++ b/Backend/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^9.1.6",
     "multer": "^2.0.2",
     "nodemailer": "^8.0.1",
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.1.11",
+    "ogl": "^1.0.11"
   }
 }
